--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -2,7 +2,7 @@ services:
   nginx-dev:
     restart: unless-stopped
     stop_signal: SIGKILL
-    depends_on: [frontend-dev]
+    depends_on: []
     networks: [net-food]
     ports:
       - "127.0.0.1:8443:80"
@@ -11,16 +11,16 @@ services:
     build:
       dockerfile: ./build/dockerfiles/nginx-dev.Dockerfile
 
-  frontend-dev:
-    restart: unless-stopped
-    volumes:
-      - ./frontend:/app
-    env_file: [.env]
-    networks: [net-food]
-    user: "${UID}:${GID}"
-    build:
-      context: ./frontend
-      dockerfile: ../build/dockerfiles/frontend-dev.Dockerfile
+  # frontend-dev:
+  #   restart: unless-stopped
+  #   volumes:
+  #     - ./frontend:/app
+  #   env_file: [.env]
+  #   networks: [net-food]
+  #   user: "${UID}:${GID}"
+  #   build:
+  #     context: ./frontend
+  #     dockerfile: ../build/dockerfiles/frontend-dev.Dockerfile
 
 networks:
   net-food:
