--- a/webserver/Cargo.toml
+++ b/webserver/Cargo.toml
@@ -6,9 +6,14 @@ edition = "2021"
 [dependencies]
 thiserror = "~2"
 regex = "~1"
+dotenv = "0.15.0"
 
 # Webframework
-actix-web = "~4"
+axum = { version = "~0.8", features = ["ws"] } # Main web library
+galvyn-core = { version = "0.1.0", git = "https://github.com/myOmikron/galvyn.git", rev = "63929f864f6513066d21f47a602e8879670c97c7", default-features = false }
+tower = { version = "~0.5", features = ["full"] } # Base traits
+tower-http = { version = "~0.6", features = ["trace"] } # Common middlewares
+tower-sessions = { version = "~0.14" } # Cookie based sessions
 swaggapi = { version = "*", default-features = false, features = [
   "axum",
   "tracing-instrument",
