added tags overview again and delete dialog for tags

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -48,6 +48,7 @@ services:
     restart: unless-stopped
     volumes:
       - ./frontend/src:/app/src
+      - ./frontend/public:/app/public
     env_file: [.env]
     networks: [net-food]
     user: "${UID}:${GID}"
