--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/vite": "^4.0.6",
+    "@tanstack/react-form": "^1.1.2",
     "@tanstack/react-router": "^1.112.0",
     "@tanstack/react-table": "^8.21.2",
     "@tanstack/router-plugin": "^1.112.0",
