--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,7 +42,7 @@
         "tailwind-merge": "^3.0.2",
         "tailwindcss": "^4.0.6",
         "tailwindcss-animate": "^1.0.7",
-        "vite": "^6.1.0"
+        "vite": "6.3.4"
     },
     "devDependencies": {
         "@testing-library/dom": "^10.4.0",
@@ -52,7 +52,7 @@
         "@vitejs/plugin-react": "^4.3.4",
         "jsdom": "^26.0.0",
         "typescript": "^5.7.2",
-        "vite": "^6.1.0",
+        "vite": "6.3.4",
         "vitest": "^3.0.5",
         "web-vitals": "^4.2.4"
     },
