--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
         "i18next-browser-languagedetector": "^8.0.4",
         "i18next-http-backend": "^3.0.2",
         "lucide-react": "^0.476.0",
+        "motion": "^12.15.0",
         "next-themes": "^0.4.6",
         "popover": "^2.4.1",
         "prettier": "^3.5.3",
