--- a/frontend/components.json
+++ b/frontend/components.json
@@ -4,7 +4,7 @@
   "rsc": false,
   "tsx": true,
   "tailwind": {
-    "config": "",
+    "config": "public/global.css",
     "css": "src/styles.css",
     "baseColor": "zinc",
     "cssVariables": true,
