--- a/webserver/migrations/0001_initial.toml
+++ b/webserver/migrations/0001_initial.toml
@@ -1,7 +1,70 @@
 [Migration]
-Hash = "8196591179079486895"
+Hash = "2531137951059354135"
 Initial = true
 Replaces = []
+
+[[Migration.Operations]]
+Type = "CreateModel"
+Name = "recipe"
+
+[[Migration.Operations.Fields]]
+Name = "uuid"
+Type = "uuid"
+
+[[Migration.Operations.Fields.Annotations]]
+Type = "primary_key"
+
+[Migration.Operations.Fields.SourceDefinedAt]
+File = "webserver/src/models/recipe.rs"
+Line = 18
+Column = 9
+
+[[Migration.Operations.Fields]]
+Name = "name"
+Type = "varchar"
+
+[[Migration.Operations.Fields.Annotations]]
+Type = "max_length"
+Value = 255
+
+[[Migration.Operations.Fields.Annotations]]
+Type = "unique"
+
+[[Migration.Operations.Fields.Annotations]]
+Type = "not_null"
+
+[Migration.Operations.Fields.SourceDefinedAt]
+File = "webserver/src/models/recipe.rs"
+Line = 21
+Column = 9
+
+[[Migration.Operations.Fields]]
+Name = "description"
+Type = "varchar"
+
+[[Migration.Operations.Fields.Annotations]]
+Type = "max_length"
+Value = 1024
+
+[[Migration.Operations.Fields.Annotations]]
+Type = "not_null"
+
+[Migration.Operations.Fields.SourceDefinedAt]
+File = "webserver/src/models/recipe.rs"
+Line = 23
+Column = 9
+
+[[Migration.Operations.Fields]]
+Name = "created_at"
+Type = "datetime"
+
+[[Migration.Operations.Fields.Annotations]]
+Type = "not_null"
+
+[Migration.Operations.Fields.SourceDefinedAt]
+File = "webserver/src/models/recipe.rs"
+Line = 33
+Column = 9
 
 [[Migration.Operations]]
 Type = "CreateModel"
@@ -108,7 +171,7 @@ Type = "varchar"
 
 [[Migration.Operations.Fields.Annotations]]
 Type = "max_length"
-Value = 1024
+Value = 256
 
 [[Migration.Operations.Fields.Annotations]]
 Type = "not_null"
@@ -128,6 +191,76 @@ Type = "not_null"
 [Migration.Operations.Fields.SourceDefinedAt]
 File = "webserver/src/models/recipe_steps.rs"
 Line = 25
+Column = 9
+
+[[Migration.Operations]]
+Type = "CreateModel"
+Name = "tag"
+
+[[Migration.Operations.Fields]]
+Name = "uuid"
+Type = "uuid"
+
+[[Migration.Operations.Fields.Annotations]]
+Type = "primary_key"
+
+[Migration.Operations.Fields.SourceDefinedAt]
+File = "webserver/src/models/tags.rs"
+Line = 12
+Column = 9
+
+[[Migration.Operations.Fields]]
+Name = "name"
+Type = "varchar"
+
+[[Migration.Operations.Fields.Annotations]]
+Type = "max_length"
+Value = 255
+
+[[Migration.Operations.Fields.Annotations]]
+Type = "unique"
+
+[[Migration.Operations.Fields.Annotations]]
+Type = "not_null"
+
+[Migration.Operations.Fields.SourceDefinedAt]
+File = "webserver/src/models/tags.rs"
+Line = 15
+Column = 9
+
+[[Migration.Operations.Fields]]
+Name = "color"
+Type = "choices"
+
+[[Migration.Operations.Fields.Annotations]]
+Type = "choices"
+Value = [
+    "Red",
+    "Orange",
+    "Amber",
+    "Yellow",
+    "Lime",
+    "Green",
+    "Emerald",
+    "Teal",
+    "Cyan",
+    "Sky",
+    "Blue",
+    "Indigo",
+    "Violet",
+    "Purple",
+    "Fuchsia",
+    "Pink",
+    "Rose",
+    "Zinc",
+]
+
+[[Migration.Operations.Fields.Annotations]]
+Type = "not_null"
+
+[Migration.Operations.Fields.SourceDefinedAt]
+File = "webserver/src/models/tags.rs"
+Line = 17
 Column = 9
 
 [[Migration.Operations]]
@@ -200,22 +333,10 @@ Column = 9
 
 [[Migration.Operations]]
 Type = "CreateModel"
-Name = "tag"
+Name = "galvynsession"
 
 [[Migration.Operations.Fields]]
-Name = "uuid"
-Type = "uuid"
-
-[[Migration.Operations.Fields.Annotations]]
-Type = "primary_key"
-
-[Migration.Operations.Fields.SourceDefinedAt]
-File = "webserver/src/models/tags.rs"
-Line = 10
-Column = 9
-
-[[Migration.Operations.Fields]]
-Name = "name"
+Name = "id"
 Type = "varchar"
 
 [[Migration.Operations.Fields.Annotations]]
@@ -223,163 +344,36 @@ Type = "max_length"
 Value = 255
 
 [[Migration.Operations.Fields.Annotations]]
-Type = "unique"
-
-[[Migration.Operations.Fields.Annotations]]
-Type = "not_null"
-
-[Migration.Operations.Fields.SourceDefinedAt]
-File = "webserver/src/models/tags.rs"
-Line = 13
-Column = 9
-
-[[Migration.Operations.Fields]]
-Name = "color"
-Type = "choices"
-
-[[Migration.Operations.Fields.Annotations]]
-Type = "choices"
-Value = [
-    "Red",
-    "Orange",
-    "Amber",
-    "Yellow",
-    "Lime",
-    "Green",
-    "Emerald",
-    "Teal",
-    "Cyan",
-    "Sky",
-    "Blue",
-    "Indigo",
-    "Violet",
-    "Purple",
-    "Fuchsia",
-    "Pink",
-    "Rose",
-    "Zinc",
-]
-
-[[Migration.Operations.Fields.Annotations]]
-Type = "not_null"
-
-[Migration.Operations.Fields.SourceDefinedAt]
-File = "webserver/src/models/tags.rs"
-Line = 15
-Column = 9
-
-[[Migration.Operations]]
-Type = "CreateModel"
-Name = "recipe"
-
-[[Migration.Operations.Fields]]
-Name = "uuid"
-Type = "uuid"
-
-[[Migration.Operations.Fields.Annotations]]
 Type = "primary_key"
 
 [Migration.Operations.Fields.SourceDefinedAt]
-File = "webserver/src/models/recipe.rs"
-Line = 18
-Column = 9
+File = "/Users/felixwallner/.cargo/git/checkouts/galvyn-f52542b4eef301aa/aa37f23/galvyn-core/src/session.rs"
+Line = 39
+Column = 5
 
 [[Migration.Operations.Fields]]
-Name = "name"
-Type = "varchar"
-
-[[Migration.Operations.Fields.Annotations]]
-Type = "max_length"
-Value = 255
-
-[[Migration.Operations.Fields.Annotations]]
-Type = "unique"
-
-[[Migration.Operations.Fields.Annotations]]
-Type = "not_null"
-
-[Migration.Operations.Fields.SourceDefinedAt]
-File = "webserver/src/models/recipe.rs"
-Line = 21
-Column = 9
-
-[[Migration.Operations.Fields]]
-Name = "description"
-Type = "varchar"
-
-[[Migration.Operations.Fields.Annotations]]
-Type = "max_length"
-Value = 1024
-
-[[Migration.Operations.Fields.Annotations]]
-Type = "not_null"
-
-[Migration.Operations.Fields.SourceDefinedAt]
-File = "webserver/src/models/recipe.rs"
-Line = 23
-Column = 9
-
-[[Migration.Operations.Fields]]
-Name = "created_at"
+Name = "expires_at"
 Type = "datetime"
 
 [[Migration.Operations.Fields.Annotations]]
 Type = "not_null"
 
 [Migration.Operations.Fields.SourceDefinedAt]
-File = "webserver/src/models/recipe.rs"
-Line = 33
-Column = 9
+File = "/Users/felixwallner/.cargo/git/checkouts/galvyn-f52542b4eef301aa/aa37f23/galvyn-core/src/session.rs"
+Line = 40
+Column = 5
 
-[[Migration.Operations]]
-Type = "CreateField"
-Model = "recipetag"
+[[Migration.Operations.Fields]]
+Name = "data"
+Type = "binary"
 
-[Migration.Operations.Field]
-Name = "recipe"
-Type = "uuid"
-
-[[Migration.Operations.Field.Annotations]]
-Type = "foreign_key"
-
-[Migration.Operations.Field.Annotations.Value]
-TableName = "recipe"
-ColumnName = "uuid"
-OnDelete = "Cascade"
-OnUpdate = "Restrict"
-
-[[Migration.Operations.Field.Annotations]]
+[[Migration.Operations.Fields.Annotations]]
 Type = "not_null"
 
-[Migration.Operations.Field.SourceDefinedAt]
-File = "webserver/src/models/recipe_tag.rs"
-Line = 19
-Column = 9
-
-[[Migration.Operations]]
-Type = "CreateField"
-Model = "recipetag"
-
-[Migration.Operations.Field]
-Name = "tag"
-Type = "uuid"
-
-[[Migration.Operations.Field.Annotations]]
-Type = "foreign_key"
-
-[Migration.Operations.Field.Annotations.Value]
-TableName = "tag"
-ColumnName = "uuid"
-OnDelete = "Cascade"
-OnUpdate = "Restrict"
-
-[[Migration.Operations.Field.Annotations]]
-Type = "not_null"
-
-[Migration.Operations.Field.SourceDefinedAt]
-File = "webserver/src/models/recipe_tag.rs"
-Line = 22
-Column = 9
+[Migration.Operations.Fields.SourceDefinedAt]
+File = "/Users/felixwallner/.cargo/git/checkouts/galvyn-f52542b4eef301aa/aa37f23/galvyn-core/src/session.rs"
+Line = 41
+Column = 5
 
 [[Migration.Operations]]
 Type = "CreateField"
@@ -448,10 +442,57 @@ ColumnName = "uuid"
 OnDelete = "Restrict"
 OnUpdate = "Restrict"
 
+[Migration.Operations.Field.SourceDefinedAt]
+File = "webserver/src/models/recipe.rs"
+Line = 25
+Column = 9
+
+[[Migration.Operations]]
+Type = "CreateField"
+Model = "recipetag"
+
+[Migration.Operations.Field]
+Name = "recipe"
+Type = "uuid"
+
+[[Migration.Operations.Field.Annotations]]
+Type = "foreign_key"
+
+[Migration.Operations.Field.Annotations.Value]
+TableName = "recipe"
+ColumnName = "uuid"
+OnDelete = "Cascade"
+OnUpdate = "Restrict"
+
 [[Migration.Operations.Field.Annotations]]
 Type = "not_null"
 
 [Migration.Operations.Field.SourceDefinedAt]
-File = "webserver/src/models/recipe.rs"
-Line = 25
+File = "webserver/src/models/recipe_tag.rs"
+Line = 19
+Column = 9
+
+[[Migration.Operations]]
+Type = "CreateField"
+Model = "recipetag"
+
+[Migration.Operations.Field]
+Name = "tag"
+Type = "uuid"
+
+[[Migration.Operations.Field.Annotations]]
+Type = "foreign_key"
+
+[Migration.Operations.Field.Annotations.Value]
+TableName = "tag"
+ColumnName = "uuid"
+OnDelete = "Cascade"
+OnUpdate = "Restrict"
+
+[[Migration.Operations.Field.Annotations]]
+Type = "not_null"
+
+[Migration.Operations.Field.SourceDefinedAt]
+File = "webserver/src/models/recipe_tag.rs"
+Line = 22
 Column = 9
