--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ services:
   nginx:
     restart: unless-stopped
     stop_signal: SIGKILL
-    depends_on: [ ]
-    networks: [ net-food ]
+    depends_on: []
+    networks: [net-food]
     ports:
       - "127.0.0.1:9090:9090"
     volumes:
@@ -20,7 +20,7 @@ services:
       - jaeger
     networks:
       - net-food
-    env_file: [ .env ]
+    env_file: [.env]
 
   postgres:
     shm_size: 128mb
@@ -28,8 +28,8 @@ services:
     networks:
       - net-food
     environment:
-      POSTGRES_DB: ${DB_DATABASE}
-      POSTGRES_USER: ${DB_USERNAME}
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
     volumes:
       - postgres-vol:/var/lib/postgresql/data
@@ -37,8 +37,8 @@ services:
       dockerfile: ./build/dockerfiles/postgres.Dockerfile
 
   jaeger:
-    networks: [ net-food ]
-    env_file: [ .env ]
+    networks: [net-food]
+    env_file: [.env]
     ports:
       - "127.0.0.1:16686:16686"
     volumes:
