--- a/webserver/Cargo.toml
+++ b/webserver/Cargo.toml
@@ -62,6 +62,7 @@ tonic = { version = "~0.12", default-features = false, features = [
 jsonwebtoken = "9.3.1"
 bcrypt = "0.17.0"
 rpassword = "7.3.1"
+futures-util = "0.3.31"
 
 # Authentication
 
