--- a/webserver/Cargo.toml
+++ b/webserver/Cargo.toml
@@ -44,6 +44,7 @@ rorm = { version = "~0.7", default-features = false, features = ["postgres-only"
 # Async
 tokio = { version = "~1", features = ["full"] }
 futures-lite = { version = "~2" }
+futures-util = "0.3.31"
 
 # Json
 serde = { version = "~1", features = ["derive"] }
@@ -60,9 +61,8 @@ tonic = { version = "~0.12", default-features = false, features = [
 ] }
 
 jsonwebtoken = "9.3.1"
-bcrypt = "0.17.0"
+argon2 = { version = "0.5.3", features = ["std"] }
 rpassword = "7.3.1"
-futures-util = "0.3.31"
 
 # Authentication
 
