--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,12 +2,15 @@
     "name": "frontend",
     "private": true,
     "type": "module",
+    "packageManager": "pnpm@10.3.0+sha512.ee592eda8815a8a293c206bb0917c4bb0ff274c50def7cbc17be05ec641fc2d1b02490ce660061356bd0d126a4d7eb2ec8830e6959fb8a447571c631d5a2442d",
     "scripts": {
         "dev": "vite --host",
         "build": "tsc && vite build --sourcemap true",
         "preview": "vite preview",
         "format": "prettier --config .prettierrc.json --write src/",
-        "gen-api": "bash scripts/gen-api.sh"
+        "gen-api": "bash scripts/gen-api.sh",
+        "lint": "prettier --check src/ && eslint . --ext .ts,.tsx",
+        "lint:fix": "prettier --write src/ && eslint . --ext .ts,.tsx --fix"
     },
     "dependencies": {
         "@radix-ui/react-dialog": "^1.1.6",
@@ -19,7 +22,6 @@
         "@radix-ui/react-separator": "^1.1.2",
         "@radix-ui/react-slot": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
-        "@tailwindcss/vite": "^4.0.6",
         "@tanstack/react-form": "^1.3.0",
         "@tanstack/react-router": "^1.112.0",
         "@tanstack/react-table": "^8.21.2",
@@ -35,28 +37,34 @@
         "motion": "^12.15.0",
         "next-themes": "^0.4.6",
         "popover": "^2.4.1",
-        "prettier": "^3.5.3",
-        "prettier-plugin-tailwindcss": "^0.6.11",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-i18next": "^15.4.1",
-        "sonner": "^2.0.1",
-        "tailwind-merge": "^3.0.2",
-        "tailwindcss": "^4.0.6",
-        "tailwindcss-animate": "^1.0.7",
-        "vite": "6.3.4"
+        "sonner": "^2.0.1"
     },
     "devDependencies": {
+        "@eslint/js": "^9.30.1",
+        "@tailwindcss/vite": "^4.0.6",
         "@testing-library/dom": "^10.4.0",
         "@testing-library/react": "^16.2.0",
         "@types/react": "^19.0.8",
         "@types/react-dom": "^19.0.3",
+        "@typescript-eslint/parser": "^8.36.0",
         "@vitejs/plugin-react": "^4.3.4",
+        "eslint": "^9.30.1",
+        "eslint-plugin-jsdoc": "^51.3.4",
+        "eslint-plugin-react": "^7.37.5",
+        "globals": "^16.3.0",
         "jsdom": "^26.0.0",
+        "prettier": "^3.5.3",
+        "prettier-plugin-tailwindcss": "^0.6.11",
+        "tailwind-merge": "^3.0.2",
+        "tailwindcss": "^4.0.6",
+        "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.7.2",
+        "typescript-eslint": "^8.36.0",
         "vite": "6.3.4",
         "vitest": "^3.0.5",
         "web-vitals": "^4.2.4"
-    },
-    "packageManager": "pnpm@10.3.0+sha512.ee592eda8815a8a293c206bb0917c4bb0ff274c50def7cbc17be05ec641fc2d1b02490ce660061356bd0d126a4d7eb2ec8830e6959fb8a447571c631d5a2442d"
+    }
 }
