--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,8 +40,7 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-i18next": "^15.4.1",
-        "sonner": "^2.0.1",
-        "form-data": ">=4.0.4"
+        "sonner": "^2.0.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.30.1",
@@ -66,7 +65,6 @@
         "typescript-eslint": "^8.36.0",
         "vite": "6.3.4",
         "vitest": "^3.0.5",
-        "web-vitals": "^4.2.4",
-        "form-data": ">=4.0.4"
+        "web-vitals": "^4.2.4"
     }
 }
