--- a/webserver/Cargo.toml
+++ b/webserver/Cargo.toml
@@ -50,6 +50,7 @@ futures-util = "0.3.31"
 serde = { version = "~1", features = ["derive"] }
 serde_repr = { version = "~0.1" }
 serde_plain = "1.0.0"
+serde_json = "1.0.140"
 
 # GRPC
 tonic = { version = "~0.12", default-features = false, features = [
