--- a/webserver/Cargo.toml
+++ b/webserver/Cargo.toml
@@ -5,20 +5,18 @@ edition = "2021"
 publish = false
 
 [dependencies]
+# Error Handling
 thiserror = "~2"
+
 rand = "0.9.1"
 dotenv = "0.15.0"
 
 # Webframework
-axum = { version = "~0.8", features = ["ws"] } # Main web library
+axum = { version = "~0.8.0", features = ["ws"] }
 galvyn = { version = "~0.1", git = "https://github.com/myOmikron/galvyn" }
 tower = { version = "~0.5", features = ["full"] } # Base traits
 tower-http = { version = "~0.6", features = ["trace"] } # Common middlewares
-tower-sessions = { version = "~0.14" }
-schemars = { version = "~0.8", features = [
-    "uuid1",
-    "raw_value",
-] }
+tower-sessions = { version = "~0.14.0" } # Cookie based sessions
 reqwest = "0.12.23"
 
 # Cli
@@ -52,6 +50,7 @@ serde = { version = "~1", features = ["derive"] }
 serde_repr = { version = "~0.1" }
 serde_plain = "1.0.0"
 serde_json = "1.0.140"
+schemars = { version = "~0.8.0", features = ["uuid1", "raw_value"] }
 
 # GRPC
 tonic = { version = "~0.12", default-features = false, features = [
@@ -61,10 +60,6 @@ tonic = { version = "~0.12", default-features = false, features = [
     "tls",
     "tls-native-roots",
 ] }
-
-jsonwebtoken = "9.3.1"
-argon2 = { version = "0.5.3", features = ["std"] }
-rpassword = "7.3.1"
 
 # Authentication
 openidconnect = { version = "~4", features = ["accept-rfc3339-timestamps", "timing-resistant-secret-traits"] }
